# tfparse

./: .gitignore  build.py  pyproject.toml
.github/workflows/: release.yml
